[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rnafm"
description = "The Large-Scale Pre-Trained Model for RNA"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Machine Learning", "Transformers", "rnafm", "RNA"]
maintainers = [
    {name = "Zhiyuan Chen", email = "chenzhiyuan@dp.tech"},
]
authors = [
    {name = "Zhiyuan Chen", email = "chenzhiyuan@dp.tech"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3"
dynamic = ["version"]
dependencies = [
    "chanfig>0.0.55",
]

[project.urls]
homepage = "http://git.dp.tech/macromolecule/rnafm_transformers"
repository = "http://git.dp.tech/macromolecule/rnafm_transformers"
documentation = "http://git.dp.tech/macromolecule/rnafm_transformers"

[tool.setuptools]
packages = ["rnafm"]

[tool.setuptools_scm]
write_to = "rnafm/_version.py"
